--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.0",
+    "git-filter-repo": "^0.0.30",
+    "install": "^0.13.0",
     "mongodb": "^7.0.0",
     "stripe": "^20.0.0"
   }
